--- a/package.json
+++ b/package.json
@@ -11,5 +11,13 @@
     "start": "node server.js"
   },
   "author": "Ahmed Onawale",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "async": "^0.9.0",
+    "body-parser": "^1.12.4",
+    "cron": "^1.0.9",
+    "express": "^4.12.3",
+    "firebase": "^2.2.4",
+    "request": "^2.55.0"
+  }
 }
